# mistral-ai-hackathon

./: .gitignore  CLAUDE.md  README.md  eval_data.jsonl  implementation_plan.md  json_schema.json  training_data.jsonl
backend/: .env.example  main.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py  websocket.py
backend/app/models/: character.py  workflow.py
backend/app/services/: character.py  executor.py  orchestrator.py  voice.py  workflow_gen.py
backend/app/utils/: wandb_tracking.py
backend/fine_tuning/: finetune_job.py  generate_training_data.py
backend/tests/: conftest.py  test_core.py
frontend/: next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CharacterPanel.tsx  ChatPanel.tsx  WorkflowVisualizer.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
wandb/: latest-run
wandb/run-20260228_135234-e9oa9uqd/: run-e9oa9uqd.wandb
wandb/run-20260228_135234-e9oa9uqd/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260228_180424-4aanety6/: run-4aanety6.wandb
wandb/run-20260228_180424-4aanety6/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260228_180715-d0p9r9by/: run-d0p9r9by.wandb
wandb/run-20260228_180715-d0p9r9by/files/: config.yaml  wandb-metadata.json  wandb-summary.json
