[project]
name = "kotoflow-backend"
version = "0.1.0"
description = "VoiceFlow AI - Build Any Workflow, Just by Talking"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mistralai>=1.0.0",
    "elevenlabs>=1.0.0",
    "composio-core>=0.5.0",
    "playwright>=1.40.0",
    "weave>=0.50.0",
    "wandb>=0.16.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
